--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title>Rock Paper Scissors</title>
 </head>
 <body>
+    <h1><span id="playerDisplay">0</span> to <span id="computerDisplay">0</span></h1>
+
+    <button id="rock">Rock</button>
+    <button id="paper">Paper</button>
+    <button id="scissors">Scissors</button>
+    <button id="reset">Reset</button>
     
     <script src="app.js"></script>
 </body>
