--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Rock Paper Scissors</title>
 </head>
 <body>
-    <h1><span id="playerDisplay">0</span> to <span id="computerDisplay">0</span></h1>
+    <h1><span id="playerDisplay">Player: 0</span> to <span id="computerDisplay">Robot: 0</span></h1>
+    <h1><span id="tieDisplay">Tie(s): 0</span></h1>
 
     <button id="rock">Rock</button>
     <button id="paper">Paper</button>
