--- a/index.html
+++ b/index.html
@@ -7,8 +7,14 @@
     <title>Rock Paper Scissors</title>
 </head>
 <body>
-    <h1><span id="playerDisplay">Player: 0</span> to <span id="computerDisplay">Robot: 0</span></h1>
+    <h1><span id="playerDisplay">Player: 0</span> vs <span id="computerDisplay">Robot: 0</span></h1>
     <h1><span id="tieDisplay">Tie(s): 0</span></h1>
+
+    <select id="topScore">
+        <option value="3">3</option>
+        <option value="5">5</option>
+        <option value="7">7</option>
+    </select>
 
     <button id="rock">Rock</button>
     <button id="paper">Paper</button>
