Add number of rounds

--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 </head>
 <body>
     <h1><span id="playerDisplay">Player: 0</span> vs <span id="computerDisplay">Robot: 0</span></h1>
-    <h1><span id="tieDisplay">Tie(s): 0</span></h1>
+    <h1><span id="tieDisplay">Ties: 0</span></h1>
 
     <select id="topScore">
+        <option value="0">none</option>
         <option value="3">3</option>
         <option value="5">5</option>
         <option value="7">7</option>
